unpackaged/main/default/objects/OrderApi__EPayment_Line__c/OrderApi__EPayment_Line__c.object-meta.xml
<CustomObject>
    <description>Tracks how E-Payments (if successful) will be applied in the system, either to an Item or Invoice.</description>
    <label>ePayment Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ePayment Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ePayment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>