unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Activation_Date__c</fullName>
    <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
    <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>