unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Activity_Type__c</fullName>
    <description>**System Calculated** The parent activity &quot;Transaction Type&quot;.</description>
    <formula>IF(OrderApi__EPayment__r.OrderApi__Transaction_Type__c != NULL,UPPER(LEFT(OrderApi__EPayment__r.OrderApi__Transaction_Type__c,1)) &amp; RIGHT(OrderApi__EPayment__r.OrderApi__Transaction_Type__c,LEN(OrderApi__EPayment__r.OrderApi__Transaction_Type__c) - 1),&quot;Scheduled/Pending Payment&quot;)</formula>
    <inlineHelpText>**System Calculated** The parent activity &quot;Transaction Type&quot;.</inlineHelpText>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>