unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the related Business Group.</description>
    <inlineHelpText>**System Calculated/Override** Link to the related Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipName>EPayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>