unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated to show the related contact.</description>
    <inlineHelpText>This field is populated to show the related contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ePayment Lines</relationshipLabel>
    <relationshipName>ePayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>