unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__End_Date__c</fullName>
    <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
    <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>