unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__EPayment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment__c</fullName>
    <description>**Required** Link to the related E-Payment.</description>
    <inlineHelpText>**Required** Link to the related E-Payment.</inlineHelpText>
    <label>E-Payment</label>
    <referenceTo>OrderApi__EPayment__c</referenceTo>
    <relationshipName>EPayment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>