unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__EPayment_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related parent EPayment Line.</description>
    <inlineHelpText>Link to related parent EPayment Line.</inlineHelpText>
    <label>Parent EPayment Line</label>
    <referenceTo>OrderApi__EPayment_Line__c</referenceTo>
    <relationshipLabel>ePayment Lines</relationshipLabel>
    <relationshipName>EPayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>