unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Invoice. Payment Activity Lines must be linked to one and only one Invoice, Credit Memo, or Sales Order.</description>
    <inlineHelpText>Link to related Invoice. Payment Activity Lines must be linked to one and only one Invoice, Credit Memo, or Sales Order.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipName>EPayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>