unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates epayment lines to invoice lines.</description>
    <inlineHelpText>Relates epayment lines to invoice lines.</inlineHelpText>
    <label>Invoice Line</label>
    <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
    <relationshipLabel>EPayment Lines</relationshipLabel>
    <relationshipName>EPayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>