unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Is_Tax__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the EPayment Line that is being used for tax.</description>
    <inlineHelpText>Defines the EPayment Line that is being used for tax.</inlineHelpText>
    <label>Is Tax</label>
    <type>Checkbox</type>
</CustomField>