unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <description>**System Calculated** The payment activity payment method type.</description>
    <formula>IF(OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c != null,
IF(OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c == &#39;credit_card&#39;, &quot;&quot;, &quot;E-Check &quot;)
&amp;
UPPER(OrderApi__EPayment__r.OrderApi__Card_Type__c)
&amp; &quot; &quot; &amp;
OrderApi__EPayment__r.OrderApi__Number__c
&amp; &quot; (Expires &quot; &amp;
TEXT(OrderApi__EPayment__r.OrderApi__Month__c)
&amp; &quot;/&quot; &amp;
TEXT(OrderApi__EPayment__r.OrderApi__Year__c)
&amp; &quot;)&quot;
,
&quot;&quot;
)</formula>
    <inlineHelpText>**System Calculated** The payment activity payment method type.</inlineHelpText>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>