unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Price_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</description>
    <inlineHelpText>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</inlineHelpText>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>