unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related Sales Order.</description>
    <inlineHelpText>**System Calculated** Link to related Sales Order.</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>ePayment Lines</relationshipLabel>
    <relationshipName>ePayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>