unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related Sales Order Line.</description>
    <inlineHelpText>**System Calculated** Link to related Sales Order Line.</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>ePayment Lines</relationshipLabel>
    <relationshipName>ePayment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>