unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Status__c</fullName>
    <description>**System Calculated** Icon representation of the payment activities status.</description>
    <formula>OrderApi__EPayment__r.OrderApi__Status__c</formula>
    <inlineHelpText>**System Calculated** Icon representation of the payment activities status.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>