unpackaged/main/default/objects/OrderApi__EPayment_Line__c/fields/OrderApi__Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**Required** The amount (currency) for payment and/or refund (depending on payment activity type) for the payment activity line. Default value is 0.00.</description>
    <inlineHelpText>**Required** The amount (currency) for payment and/or refund (depending on payment activity type) for the payment activity line. Default value is 0.00.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>